# open_model_zoo

./: .bandit  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .yamllint  CODEOWNERS  CONTRIBUTING.md  Jenkinsfile  README.md  contribution.md  datasets.md  grml.sh  grml.yaml  image_processing.py
demos/: .clang-format  CMakeLists.txt  Dockerfile  README.md  Readme.md  acquire_opencv.md  build_demos.sh  build_demos_msvc.bat  build_demos_msvc2015.bat  build_demos_msvc2017.bat  classification_sample.py  create_msvc2015_solution.bat  create_msvc2017_solution.bat  example.py  example_to_reach.py  object_detection_sample.py  requirements.txt  segmentation_sample.py  simple_example_to_reach.py
demos/async_pipeline_demo/: CMakeLists.txt  command_parameters.h  main.cpp
demos/classification_demo/: CMakeLists.txt  README.md  classification_demo.hpp  grid_mat.hpp  imagenet_2015_classes.txt  main.cpp  models.lst
demos/cmake/: CPUID.cmake  OptimizationFlags.cmake  feature_defs.cmake
demos/common/: CMakeLists.txt  image_capture.h  images_capture.h  img_cap.h
demos/crossroad_camera_demo/: CMakeLists.txt  README.md  crossroad_camera_demo.hpp  main.cpp  models.lst
demos/end2end_video_analytics/: CMakeLists.txt
demos/extension/: CMakeLists.txt  README.md  ext_argmax.cpp  ext_base.cpp  ext_base.hpp  ext_ctc_greedy.cpp  ext_detectionoutput.cpp  ext_grn.cpp  ext_interp.cpp  ext_list.cpp  ext_list.hpp  ext_mvn.cpp  ext_normalize.cpp  ext_powerfile.cpp  ext_priorbox.cpp  ext_priorbox_clustered.cpp  ext_proposal.cpp  ext_psroi.cpp  ext_region_yolo.cpp  ext_reorg_yolo.cpp  ext_resample.cpp  ext_simplernms.cpp  ext_spatial_transformer.cpp
demos/face_detection_wa/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  three  three.cpp  threeTest.cpp
demos/gapi_interactive_face_detection_demo/: CMakeLists.txt  face.cpp  face.hpp  interactive_face_detection.hpp  main.cpp  utils.hpp  visualizer.cpp  visualizer.hpp
demos/gaze_estimation_demo/: CMakeLists.txt  README.md  gaze_estimation_demo.hpp  main.cpp  models.lst
demos/hand_pose_estimation_demo/: CMakeLists.txt  README.md  main.cpp  models.lst
demos/human_pose_estimation_demo/: CMakeLists.txt  README.md  main.cpp  models.lst
demos/imagenet_classification_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  classification_results.h  classification_sample_async.h  grid_mat.hpp  imagenet_classification_demo.h  imagenet_classification_demo.hpp  infer_request_callback.hpp  main.cpp  models.lst  my_functor.hpp
demos/interactive_face_detection_demo/: CMakeLists.txt  README.md  detectors.cpp  detectors.hpp  face.cpp  face.hpp  interactive_face_detection.hpp  main.cpp  models.lst  visualizer.cpp  visualizer.hpp
demos/interactive_face_detection_demo_gapi/: CMakeLists.txt  README.md  face.cpp  face.hpp  interactive_face_detection.hpp  interactive_face_detection_gapi.hpp  main.cpp  utils.hpp  visualizer.cpp  visualizer.hpp
demos/mask_rcnn_demo/: CMakeLists.txt  README.md  main.cpp  mask_rcnn_demo.h  models.lst
demos/mri_reconstruction_demo/: CMakeLists.txt  ext_fft2d.cpp  main.cpp  mri_reconstruction_demo.hpp  npy_reader.hpp
demos/multi_channel/: CMakeLists.txt  README.md
demos/multichannel_demo/: CMakeLists.txt  README.md  models.lst
demos/multichannel_face_detection/: CMakeLists.txt  README.md  decoder.cpp  decoder.hpp  graph.cpp  graph.hpp  input.cpp  input.hpp  main.cpp  multichannel_face_detection.hpp  output.cpp  output.hpp  perf_timer.cpp  perf_timer.hpp  threading.cpp  threading.hpp
demos/object_detection_demo/: CMakeLists.txt  README.md  detection_model.cpp  detection_model.h  detection_model_ssd.cpp  detection_model_ssd.h  detection_model_yolo.cpp  detection_model_yolo.h  detectionoutput.h  main.cpp  models.lst  object_detection_demo.h
demos/object_detection_demo_faster_rcnn/: CMakeLists.txt  README.md  detectionoutput.h  main.cpp  object_detection_demo.h  object_detection_demo_faster_rcnn.h
demos/object_detection_demo_ssd_async/: CMakeLists.txt  Models.h  README.md  Ssd_async.h  command_parameters.h  config_factory.cpp  config_factory.h  detection_model.cpp  detection_model.h  detection_model_ssd.cpp  detection_model_ssd.h  detection_model_yolo.cpp  detection_model_yolo.h  detection_pipeline.cpp  detection_pipeline.h  detection_pipeline_ssd.cpp  detection_pipeline_ssd.h  detection_pipeline_yolo.cpp  detection_pipeline_yolo.h  main.cpp  model.cpp  model.hpp  models.cpp  models.hpp  models.lst  object_detection_demo_ssd_async.hpp  pipeline_base.cpp  pipeline_base.h  retinaface.cpp  retinaface.hpp  ssd.cpp  ssd.hpp  yolov3.cpp  yolov3.hpp
demos/object_detection_demo_yolov3_async/: CMakeLists.txt  README.md  image_capture.hpp  main.cpp  models.lst  object_detection_demo_yolov3_async.hpp
demos/pedestrian_tracker_demo/: CMakeLists.txt  README.md  main.cpp  models.lst
demos/python_demos/: affinity_setting_demo.py  dynamic_batch_demo.py  face_recognition_demo.md  face_recognition_demo.py  monitors.py  mri_segmentation.py  object_detection_demo_ssd_async.py  object_detection_demo_yolov3.py  requirements.txt  segmentation_demo.py  text_detection_demo.py
demos/security_barrier_camera_demo/: CMakeLists.txt  README.md  common.hpp  grid_mat.hpp  input_wrappers.hpp  main.cpp  net_wrappers.hpp  security_barrier_camera.hpp  security_barrier_camera_demo.hpp
demos/segmentation_demo/: CMakeLists.txt  README.md  main.cpp  models.lst  segmentation_demo.h
demos/segmentation_demo_async/: CMakeLists.txt  README.md  command_parameters.h  main.cpp  segmentation_model.cpp  segmentation_model.h  segmentation_pipeline.cpp  segmentation_pipeline.h
demos/smart_classroom_demo/: CMakeLists.txt  README.md  action_event_metrics.py  create_list.py  main.cpp
demos/smart_library_demo/: __init__.py  createQRCodes.py
demos/social_distance_demo/: main.cpp
model_api_samples/: CMakeLists.txt  async_sample.py  classification_sample.py  example.py  example_to_reach.py  image_models_demo.py  object_detection_sample.py  ovms_object_detection_sample.py  requirements.txt  segmentation_sample.py
(+5704 files in other folders)
